Added the round function to defined functions to limit returns to two decimal places. also added a function to calculate the present value needed to obtain a future value based on simple compound interest

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -48,21 +48,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is the present sum of money: \n"
+      "What is the future sum of money: \n"
      ]
     },
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 100\n"
+      " 121\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "121.00000000000001\n"
+      "99.99999999999999\n"
      ]
     }
    ],
@@ -95,7 +95,14 @@
     "    p = int(get_present())\n",
     "    cf = p*((1+i)**n)\n",
     "    return cf\n",
-    "print(compound_f())"
+    "def compound_p():\n",
+    "    i = float(get_interest())\n",
+    "    n = int(get_periods())\n",
+    "    f = int(get_future())\n",
+    "    cp = f*((1+i)**(-n))\n",
+    "    cpr = round(cp,2)\n",
+    "    return cp\n",
+    "print(compound_p())"
    ]
   },
   {
