Added functions for calculating future value of money given constant additional amounts added and what is needed to add if a certain amount is desired after a certain time

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " .10\n"
+      " .26\n"
      ]
     },
     {
@@ -41,7 +41,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 2\n"
+      " 12\n"
      ]
     },
     {
@@ -55,14 +55,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 121\n"
+      " 100000\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "99.99999999999999\n"
+      "1731.94\n"
      ]
     }
    ],
@@ -89,20 +89,45 @@
     "    print(\"What is the future sum of money: \")\n",
     "    f = input()\n",
     "    return f\n",
+    "def get_add():\n",
+    "    # money to be added per term\n",
+    "    print(\"What is the sum of money you want to add per term: \")\n",
+    "    a = input()\n",
+    "    return a\n",
     "def compound_f():\n",
     "    i = float(get_interest())\n",
     "    n = int(get_periods())\n",
     "    p = int(get_present())\n",
+    "    # The equation for compound interest\n",
     "    cf = p*((1+i)**n)\n",
-    "    return cf\n",
+    "    cfr = round(cf,2)\n",
+    "    return cfr\n",
     "def compound_p():\n",
     "    i = float(get_interest())\n",
     "    n = int(get_periods())\n",
     "    f = int(get_future())\n",
+    "    # The equation for determining the present value of compounded interest\n",
     "    cp = f*((1+i)**(-n))\n",
     "    cpr = round(cp,2)\n",
-    "    return cp\n",
-    "print(compound_p())"
+    "    return cpr\n",
+    "def compound_s():\n",
+    "    i = float(get_interest())\n",
+    "    n = int(get_periods())\n",
+    "    a = int(get_add())\n",
+    "    # The equation for determing value with equal monthly payments\n",
+    "    cs = a*((((1+i)**n)-1)/i)\n",
+    "    csr = round(cs,2)\n",
+    "    return csr\n",
+    "def compound_sf():\n",
+    "    i = float(get_interest())\n",
+    "    n = int(get_periods())\n",
+    "    f = int(get_future())\n",
+    "    # The equation for determing value with equal monthly payments\n",
+    "    csf = f*(i/(((1+i)**n)-1))\n",
+    "    csfr = round(csf,2)\n",
+    "    return csfr\n",
+    "\n",
+    "print(compound_sf())"
    ]
   },
   {
