Added  a while loop with nested if and elif statement for selecting the equation to be evaluated with a prompt to ask if you want to analyze another set of parameters

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,20 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy\n",
-    "import pandas\n",
     "import math\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This tool lets you calculate various values of money based upon compounding interest for various terms and conditions.\n",
+      "If you would like to know the value of a future sum of money given a present sum, the interest rate anumber of terms please press f\n",
+      "If you would like to know the value of a present sum of money given a future sum, the interest rate anumber of terms please press p\n",
+      "If you would like to know the value of a future sum of money given a set amount added every term, the interest rate anumber of terms please press a\n",
+      "If you would like to know the value needed every term for given a future sum, the interest rate anumber of terms please press r\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " f\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -27,7 +44,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " .26\n"
+      " .1\n"
      ]
     },
     {
@@ -41,7 +58,82 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 12\n"
+      " 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the present sum of money: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The future value is 121.0\n",
+      "Would you like to calculate another value?(y/n)\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " y\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This tool lets you calculate various values of money based upon compounding interest for various terms and conditions.\n",
+      "If you would like to know the value of a future sum of money given a present sum, the interest rate anumber of terms please press f\n",
+      "If you would like to know the value of a present sum of money given a future sum, the interest rate anumber of terms please press p\n",
+      "If you would like to know the value of a future sum of money given a set amount added every term, the interest rate anumber of terms please press a\n",
+      "If you would like to know the value needed every term for given a future sum, the interest rate anumber of terms please press r\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " p\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the rate of return: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " .1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the total number of terms: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 2\n"
      ]
     },
     {
@@ -55,19 +147,39 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 100000\n"
+      " 121\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1731.94\n"
+      "The present value is 100.0\n",
+      "Would you like to calculate another value?(y/n)\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " y\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This tool lets you calculate various values of money based upon compounding interest for various terms and conditions.\n",
+      "If you would like to know the value of a future sum of money given a present sum, the interest rate anumber of terms please press f\n",
+      "If you would like to know the value of a present sum of money given a future sum, the interest rate anumber of terms please press p\n",
+      "If you would like to know the value of a future sum of money given a set amount added every term, the interest rate anumber of terms please press a\n",
+      "If you would like to know the value needed every term for given a future sum, the interest rate anumber of terms please press r\n"
      ]
     }
    ],
    "source": [
-    "response = 'y'\n",
+    "# Flag to determine if program is still active\n",
+    "active = 'y'\n",
     "### Creating the functions for \n",
     "def get_interest():\n",
     "    # interest rate\n",
@@ -127,7 +239,31 @@
     "    csfr = round(csf,2)\n",
     "    return csfr\n",
     "\n",
-    "print(compound_sf())"
+    "while active == 'y':\n",
+    "    print(\"This tool lets you calculate various values of money based upon compounding interest for various terms and conditions.\")\n",
+    "    print(\"If you would like to know the value of a future sum of money given a present sum, the interest rate anumber of terms please press f\")\n",
+    "    print(\"If you would like to know the value of a present sum of money given a future sum, the interest rate anumber of terms please press p\")\n",
+    "    print(\"If you would like to know the value of a future sum of money given a set amount added every term, the interest rate anumber of terms please press a\")\n",
+    "    print(\"If you would like to know the value needed every term for given a future sum, the interest rate anumber of terms please press r\")\n",
+    "    response = input()\n",
+    "    if response == 'f':\n",
+    "        fv = compound_f()\n",
+    "        print(\"The future value is \" + str(fv))\n",
+    "    elif response == 'p':\n",
+    "        pv = compound_p()\n",
+    "        print(\"The present value is \" + str(pv))\n",
+    "    elif response == 'a':\n",
+    "        av = compound_s()\n",
+    "        print(\"The present value is \" + str(av))\n",
+    "    elif response == 'r':\n",
+    "        rv = compound_sf()\n",
+    "        print(\"The present value is \" + str(rv))\n",
+    "    else:\n",
+    "        print('Your selection was not valid')\n",
+    "        \n",
+    "    print(\"Would you like to calculate another value?(y/n)\")\n",
+    "    active = input()\n",
+    "    "
    ]
   },
   {
